--- a/view/src/index.css
+++ b/view/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.signin-form {
+	padding: 10px;
+	width: 95%;
+	height: 75vh;
+	margin: auto;
+	margin-top: 10%;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.signin-form h1 {
+	margin-top: -0px;
+	margin-bottom: -0px;
+	font-size: 36px;
+	color: #0084ff;
+	font-weight: normal;
+}
+
+.login-btn {
+	width: 100%;
+	border-radius: 20px;
+	padding: 11px 40px;
+	background-color: #0084ff;
+	color: #fff;
+	border: 3px solid #0073ff;
+	cursor: pointer;
+	outline: none;
+}
+
+.login-btn:active {
+	background-color: #0073ff;
+	color: #fff;
+	transition: 0.3s;
+}
+
+.signin-form .seperator {
+	width: 100%;
+	border-top: 1px solid #ccc;
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+}
+
+.link {
+	color: #0073ff;
+}
+
+.signin-form .seperator b {
+	padding: 5px;
+	border: 1px solid #ccc;
+	border-radius: 50%;
+	background-color: white;
+	margin-top: -15px;
+}
+
+.signin-form p {
+	font-size: 16px;
+	color: #0073ff;
+}
+
+.signin-form .social-icon button {
+	font-size: 20px;
+	color: white;
+	height: 50px;
+	width: 50px;
+	background: #0073ff;
+	border-radius: 60%;
+	border: none;
+	cursor: pointer;
+}
+
+.signin-form .social-icon > button {
+	margin-right: 20px;
+}
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+}
+
+.card:hover {
+	box-shadow: 0 14px 18px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width: 700px) {
+	.signin-form {
+		width: 80%;
+		height: 60vh;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.signin-form {
+		width: 60%;
+		height: 50vh;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.signin-form {
+		margin-top: 5%;
+		width: 30%;
+		height: 60vh;
+	}
 }
