--- a/view/src/components/Dashboard.css
+++ b/view/src/components/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard-container {
-	display: flex;
+	display: grid;
+	grid-template-columns: 1.3fr 3fr;
 	border: 0.3px solid #e3e1dc;
-	height: 95vh;
 	margin: auto;
 }
 
@@ -12,26 +12,26 @@
 }
 
 .online-users {
-	flex: 1 1 auto;
 	border-right: 0.3px solid #e3e1dc;
-	display: flex;
-	flex-flow: column;
 }
 
 .online-users h4 {
 	margin-top: -0px;
+	font-size: 2rem;
 	text-align: center;
-	padding: 5px;
 	border-bottom: 0.3px solid #e3e1dc;
 }
 
 .online-users > div {
-	margin-top: -20px;
+	margin-top: -2.6rem;
+	height: 85vh;
 	overflow-y: scroll;
 }
 
 .online-user {
-	padding: 20px;
+	position: relative;
+	padding: 2rem;
+	min-width: 25rem;
 }
 
 .online-user:hover {
@@ -42,19 +42,23 @@
 
 .online-user .initials {
 	background-color: #0084ff;
-	padding: 10px;
+	width: 2rem;
+	padding: 1rem;
+	font-size: 1.5rem;
 	color: #ffffff;
 	border-radius: 50%;
 }
 
 .online-user .full-name {
-	margin-left: 5px;
+	font-size: 1.6rem;
 	white-space: nowrap;
 	overflow: hidden;
-	max-width: 120px;
+	max-width: 18rem;
 	text-overflow: ellipsis;
+	position: absolute;
+	top: 0.2rem;
+	left: 7rem;
 }
 
 .chat-box {
-	flex: 4 1 auto;
 }
