--- a/view/src/components/Chatbox.css
+++ b/view/src/components/Chatbox.css
@@ -1,17 +1,21 @@
 .chat-box {
-	display: flex;
-	flex-direction: column;
 	position: relative;
 }
 
-.messages {
+.chat-box .main {
 	border-top: 0.3px solid #e3e1dc;
 	border-bottom: 0.3px solid #e3e1dc;
-	flex: 1 1;
+	font-size: 2.1rem;
+	height: 75vh;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
-.chat-box .footer {
-	padding-top: 1rem;
+#messages {
+	margin: 1rem;
+	margin-bottom: 7rem;
+	display: flex;
+	flex-direction: column;
 }
 
 #message-input {
@@ -24,6 +28,8 @@
 	background-color: #e3e1dc;
 	border: none;
 	width: 100%;
+	position: absolute;
+	bottom: 0rem;
 }
 
 .chat-box .header {
@@ -57,4 +63,23 @@
 	color: #0084ff;
 	font-size: 2.7rem;
 	cursor: pointer;
+}
+
+.received-message {
+	background-color: #e3e1dc;
+}
+
+.sent-message {
+	background-color: #0084ff;
+	align-self: flex-end;
+}
+
+.received-message,
+.sent-message {
+	width: fit-content;
+	padding: 1rem;
+	color: #ffffff;
+	border-radius: 20px;
+	max-width: 30rem;
+	overflow-wrap: break-word;
 }
